--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <div class="carousel-container">
   <div class="carousel">
  <div class="product-card">
-      <img src="../imagen/Inferior Hombres/1.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/1.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -147,7 +147,7 @@
 
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/2.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/2.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -158,7 +158,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/3.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/3.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -169,7 +169,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/4.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/4.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -180,7 +180,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/5.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/5.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -191,7 +191,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/6.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/6.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -202,7 +202,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/7.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/7.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -213,7 +213,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/8.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/8.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -224,7 +224,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/9.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/9.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -235,7 +235,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/10.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/10.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -246,7 +246,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/11.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/11.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -257,7 +257,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/12.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/12.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -268,7 +268,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/13.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/13.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -279,7 +279,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/14.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/14.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -290,7 +290,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/15.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/15.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -301,7 +301,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/16.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/16.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -312,7 +312,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/17.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/17.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -323,7 +323,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/18.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/18.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -334,7 +334,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/19.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/19.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -345,7 +345,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/20.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/20.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -356,7 +356,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/21.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/21.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -367,7 +367,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/22.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/22.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -378,7 +378,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/23.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/23.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -389,7 +389,7 @@
       </div>
 
         <div class="product-card">
-      <img src="../imagen/Inferior Hombres/24.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/24.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -401,7 +401,7 @@
 
 
               <div class="product-card">
-      <img src="../imagen/Inferior Hombres/25.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/25.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -413,7 +413,7 @@
 
 
               <div class="product-card">
-      <img src="../imagen/Inferior Hombres/26.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/26.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -425,7 +425,7 @@
 
 
               <div class="product-card">
-      <img src="../imagen/Inferior Hombres/27.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/27.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
@@ -437,7 +437,7 @@
 
 
               <div class="product-card">
-      <img src="../imagen/Inferior Hombres/28.jpeg" alt="Top Vital Seamless">
+      <img src="./imagen/Inferior Hombres/28.jpeg" alt="Top Vital Seamless">
       <div class="product-info">
        <!---<span class="badge">NEW</span>--> 
        <p class="tituloo">Tallas</p>
