--- a/Ropas/Conjuntos_Hombres.html
+++ b/Ropas/Conjuntos_Hombres.html
@@ -20,7 +20,7 @@
 
 
   <div class="navbar-right">
- <a href="../Carito.html" class="Carito">🛒</a> 
+ <a href="../imagen/Carito.html" class="Carito">🛒</a> 
   </div>
 </header>
 </div>
