--- a/imagen/Carito.html
+++ b/imagen/Carito.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Carrito de Compras</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="./css/carrito.css" />
+  <link rel="stylesheet" href="../css/carrito.css" />
 </head>
 <body>
   <div class="menu">
@@ -15,7 +15,7 @@
       </div>
 
       <div class="navbar-center">
-        <a href="index.html"><img src="./imagen/logo.jpeg" class="imagen" alt="Logo"></a>
+        <a href="index.html"><img src="../imagen/logo.jpeg" class="imagen" alt="Logo"></a>
       </div>
 
       <nav id="side-menu" class="side-menu" aria-label="Menú lateral">
@@ -42,6 +42,6 @@
   </main>
 
 
-  <script src="./javascript/carrito.js"></script>
+  <script src="../javascript/carrito.js"></script>
 </body>
 </html>
