--- a/imagen/Carito.html
+++ b/imagen/Carito.html
@@ -15,7 +15,7 @@
       </div>
 
       <div class="navbar-center">
-        <a href="index.html"><img src="../imagen/logo.jpeg" class="imagen" alt="Logo"></a>
+        <a href="../index.html"><img src="../imagen/logo.jpeg" class="imagen" alt="Logo"></a>
       </div>
 
       <nav id="side-menu" class="side-menu" aria-label="Menú lateral">
