--- a/Ropa.html
+++ b/Ropa.html
@@ -18,7 +18,7 @@
   </a>
   </div>
 
- <a href="../imagen/Carito.html" class="Carito">🛒</a> 
+ <a href="./imagen/Carito.html" class="Carito">🛒</a> 
 </header>
 </div>
 
