--- a/Suplementos.html
+++ b/Suplementos.html
@@ -18,7 +18,7 @@
           <img src="./imagen/logo.jpeg" class="imagen" />
         </a>
       </div>
- <a href="../imagen/Carito.html" class="Carito">🛒</a> 
+ <a href="./imagen/Carito.html" class="Carito">🛒</a> 
     </header>
   </div>
 
