--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
 
   <div class="navbar-center">
-    <a href="index.html"> <img src="./imagen/logo.jpeg" class="imagen">
+    <a href="./index.html"> <img src="./imagen/logo.jpeg" class="imagen">
   </div>
   
 <a href="./imagen/Carito.html" class="Carito">🛒</a>
