--- a/Accesorios.html
+++ b/Accesorios.html
@@ -17,7 +17,7 @@
     <a href="./index.html"> <img src="./imagen/logo.jpeg" class="imagen">
   </a>
   </div>
- <a href="../imagen/Carito.html" class="Carito">🛒</a> 
+ <a href="./imagen/Carito.html" class="Carito">🛒</a> 
 </header>
 </div>
 
