--- a/Ropa.html
+++ b/Ropa.html
@@ -50,7 +50,7 @@
 
    <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/1.png" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/1.png" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -61,7 +61,7 @@
 
     <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/2.png" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/2.png" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -72,7 +72,7 @@
 
     <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/3.png" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/3.png" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -83,7 +83,7 @@
 
     <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/4.png" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/4.png" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -94,7 +94,7 @@
 
     <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/5.png" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/5.png" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -105,7 +105,7 @@
 
     <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/6.png" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/6.png" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -116,7 +116,7 @@
 
     <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/7.png" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/7.png" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -127,7 +127,7 @@
 
     <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/8.png" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/8.png" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -138,7 +138,7 @@
 
     <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/9.png" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/9.png" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -149,7 +149,7 @@
 
     <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/10.png" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/10.png" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -160,7 +160,7 @@
 
     <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/11.png" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/11.png" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -171,7 +171,7 @@
 
     <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/12.jpeg" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/12.jpeg" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -182,7 +182,7 @@
 
     <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/13.jpeg" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/13.jpeg" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -193,7 +193,7 @@
 
     <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/14.png" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/14.png" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -204,7 +204,7 @@
 
     <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/15.png" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/15.png" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -215,7 +215,7 @@
 
     <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/16.png" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/16.png" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -226,7 +226,7 @@
 
     <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/17.png" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/17.png" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -237,7 +237,7 @@
 
     <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/18.png" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/18.png" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -248,7 +248,7 @@
 
     <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/19.png" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/19.png" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -259,7 +259,7 @@
 
     <div class="product-card">
     <a href="./Ropas/Superior_hombre.html">
-  <img src="../imagen/Superior Hombres/20.png" alt="Top Vital Seamless"></a>
+  <img src="./imagen/Superior Hombres/20.png" alt="Top Vital Seamless"></a>
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -285,7 +285,7 @@
     
    <div class="container">
     <div class="product-card">
-  <img src="../imagen/Superior Hombres/1.png" alt="Top Vital Seamless">
+  <img src="./imagen/Superior Hombres/1.png" alt="Top Vital Seamless">
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -303,7 +303,7 @@
 </div>
 
    <div class="product-card">
-  <img src="../imagen/Superior Hombres/2.png" alt="Top Vital Seamless">
+  <img src="./imagen/Superior Hombres/2.png" alt="Top Vital Seamless">
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -321,7 +321,7 @@
 </div>
 
    <div class="product-card">
-  <img src="../imagen/Superior Hombres/3.png" alt="Top Vital Seamless">
+  <img src="./imagen/Superior Hombres/3.png" alt="Top Vital Seamless">
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -339,7 +339,7 @@
 </div>
 
    <div class="product-card">
-  <img src="../imagen/Superior Hombres/4.png" alt="Top Vital Seamless">
+  <img src="./imagen/Superior Hombres/4.png" alt="Top Vital Seamless">
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
@@ -356,7 +356,7 @@
 </div>
 
    <div class="product-card">
-  <img src="../imagen/Superior Hombres/5.png" alt="Top Vital Seamless">
+  <img src="./imagen/Superior Hombres/5.png" alt="Top Vital Seamless">
   <div class="product-info">
     <!---<span class="badge">NEW</span>--> 
     <p class="tituloo">Conjunto Spiderman Blanco</p>
