--- a/Suplementos.html
+++ b/Suplementos.html
@@ -53,7 +53,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/1.jpeg" alt="Sin Sabor" /></a>
+    <img src="./imagen/BCAA/1.jpeg" alt="Sin Sabor" /></a>
     <div class="product-info">
       <p class="tituloo">Sin Sabor</p>
       <p class="tallas">Nutricost EAA Powder 30 porciones Aminoácidos esenciales</p>
@@ -63,7 +63,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/2.jpeg" alt="Frambuesa Azul" /></a>
+    <img src="./imagen/BCAA/2.jpeg" alt="Frambuesa Azul" /></a>
     <div class="product-info">
       <p class="tituloo">Frambuesa Azul</p>
       <p class="tallas">Nutricost EAA Powder 30 porciones Aminoácidos esenciales</p>
@@ -75,7 +75,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/3.jpeg" alt="POG" /></a>
+    <img src="./imagen/BCAA/3.jpeg" alt="POG" /></a>
     <div class="product-info">
       <p class="tituloo">POG</p>
       <p class="tallas">Nutricost EAA Powder 30 porciones Aminoácidos esenciales</p>
@@ -87,7 +87,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/4.jpeg" alt="Fruit Punch" /></a>
+    <img src="./imagen/BCAA/4.jpeg" alt="Fruit Punch" /></a>
     <div class="product-info">
       <p class="tituloo">Fruit Punch</p>
       <p class="tallas">Nutricost EAA Powder 30 porciones Aminoácidos esenciales</p>
@@ -99,7 +99,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/5.jpeg" alt="Sin Sabor" /></a>
+    <img src="./imagen/BCAA/5.jpeg" alt="Sin Sabor" /></a>
     <div class="product-info">
       <p class="tituloo">Sin Sabor</p>
       <p class="tallas"> Nutricost BCAA Polvo (30 Servicios)</p>
@@ -111,7 +111,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/6.jpeg" alt="Sin Sabor" /></a>
+    <img src="./imagen/BCAA/6.jpeg" alt="Sin Sabor" /></a>
     <div class="product-info">
       <p class="tituloo">Sin Sabor</p>
       <p class="tallas">Nutricost  BCAA Polvo (60 Servicios)</p>
@@ -123,7 +123,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/7.jpeg" alt="Sin Sabor" /></a>
+    <img src="./imagen/BCAA/7.jpeg" alt="Sin Sabor" /></a>
     <div class="product-info">
       <p class="tituloo">Sin Sabor</p>
       <p class="tallas">Nutricost  BCAA Polvo (150 Servicios)</p>
@@ -135,7 +135,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/8.jpeg" alt="Uva" /></a>
+    <img src="./imagen/BCAA/8.jpeg" alt="Uva" /></a>
     <div class="product-info">
       <p class="tituloo">Uva</p>
       <p class="tallas">Nutricost BCAA Polvo (30 Servicios)</p>
@@ -147,7 +147,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/9.jpeg" alt="Uva" /></a>
+    <img src="./imagen/BCAA/9.jpeg" alt="Uva" /></a>
     <div class="product-info">
       <p class="tituloo">Uva</p>
       <p class="tallas">Nutricost BCAA Polvo (60 Servicios)</p>
@@ -159,7 +159,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/10.jpeg" alt="Uva" /></a>
+    <img src="./imagen/BCAA/10.jpeg" alt="Uva" /></a>
     <div class="product-info">
       <p class="tituloo">Uva</p>
       <p class="tallas">Nutricost BCAA Polvo (90 Servicios)</p>
@@ -173,7 +173,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/11.jpeg" alt="Sandia" /></a>
+    <img src="./imagen/BCAA/11.jpeg" alt="Sandia" /></a>
     <div class="product-info">
       <p class="tituloo">Sandia</p>
       <p class="tallas">Nutricost BCAA Polvo (30 Servicios)</p>
@@ -185,7 +185,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/12.jpeg" alt="Sandia" /></a>
+    <img src="./imagen/BCAA/12.jpeg" alt="Sandia" /></a>
     <div class="product-info">
       <p class="tituloo">Sandia</p>
       <p class="tallas">Nutricost BCAA Polvo (60 Servicios)</p>
@@ -197,7 +197,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/13.jpeg" alt="Sandia" /></a>
+    <img src="./imagen/BCAA/13.jpeg" alt="Sandia" /></a>
     <div class="product-info">
       <p class="tituloo">Sandia</p>
       <p class="tallas">Nutricost BCAA Polvo (90 Servicios)</p>
@@ -209,7 +209,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/14.jpeg" alt="Sandia" /></a>
+    <img src="./imagen/BCAA/14.jpeg" alt="Sandia" /></a>
     <div class="product-info">
       <p class="tituloo">Sandia</p>
       <p class="tallas">Nutricost BCAA Polvo (120 Servicios)</p>
@@ -221,7 +221,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/15.jpeg" alt="Piña" /></a>
+    <img src="./imagen/BCAA/15.jpeg" alt="Piña" /></a>
     <div class="product-info">
       <p class="tituloo">Piña</p>
       <p class="tallas">Nutricost BCAA Polvo (30 Servicios)</p>
@@ -233,7 +233,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/16.jpeg" alt="Piña" /></a>
+    <img src="./imagen/BCAA/16.jpeg" alt="Piña" /></a>
     <div class="product-info">
       <p class="tituloo">Piña</p>
       <p class="tallas">Nutricost BCAA Polvo (60 Servicios)</p>
@@ -245,7 +245,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/17.jpeg" alt="Piña" /></a>
+    <img src="./imagen/BCAA/17.jpeg" alt="Piña" /></a>
     <div class="product-info">
       <p class="tituloo">Piña</p>
       <p class="tallas">Nutricost BCAA Polvo (90 Servicios)</p>
@@ -257,7 +257,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/18.jpeg" alt="Fresa Limón" /></a>
+    <img src="./imagen/BCAA/18.jpeg" alt="Fresa Limón" /></a>
     <div class="product-info">
       <p class="tituloo">Fresa Limón</p>
       <p class="tallas">Nutricost BCAA Polvo (30 Servicios)</p>
@@ -269,7 +269,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/19.jpeg" alt="Fresa Limón" /></a>
+    <img src="./imagen/BCAA/19.jpeg" alt="Fresa Limón" /></a>
     <div class="product-info">
       <p class="tituloo">Fresa Limón</p>
       <p class="tallas">Nutricost BCAA Polvo (60 Servicios)</p>
@@ -281,7 +281,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/20.jpeg" alt="Naranja Mango" /></a>
+    <img src="./imagen/BCAA/20.jpeg" alt="Naranja Mango" /></a>
     <div class="product-info">
       <p class="tituloo">Naranja Mango</p>
       <p class="tallas">Nutricost BCAA Polvo (60 Servicios)</p>
@@ -293,7 +293,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/21.jpeg" alt="Limonada" /></a>
+    <img src="./imagen/BCAA/21.jpeg" alt="Limonada" /></a>
     <div class="product-info">
       <p class="tituloo">Limonada</p>
       <p class="tallas">Nutricost BCAA Polvo (90 Servicios)</p>
@@ -305,7 +305,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/22.jpeg" alt="Kiwi" /></a>
+    <img src="./imagen/BCAA/22.jpeg" alt="Kiwi" /></a>
     <div class="product-info">
       <p class="tituloo">Kiwi</p>
       <p class="tallas">Nutricost BCAA Polvo (30 Servicios)</p>
@@ -317,7 +317,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/23.jpeg" alt="Kiwi" /></a>
+    <img src="./imagen/BCAA/23.jpeg" alt="Kiwi" /></a>
     <div class="product-info">
       <p class="tituloo">Kiwi</p>
       <p class="tallas">Nutricost BCAA Polvo (60 Servicios)</p>
@@ -329,7 +329,7 @@
 
    <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-    <img src="../imagen/BCAA/24.jpeg" alt="Kiwi" /></a>
+    <img src="./imagen/BCAA/24.jpeg" alt="Kiwi" /></a>
     <div class="product-info">
       <p class="tituloo">Kiwi</p>
       <p class="tallas">Nutricost BCAA Polvo (90 Servicios)</p>
@@ -341,7 +341,7 @@
 
   <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-  <img src="../imagen/BCAA/25.jpeg" alt="Manzana Verde" /></a>
+  <img src="./imagen/BCAA/25.jpeg" alt="Manzana Verde" /></a>
   <div class="product-info">
     <p class="tituloo">Manzana Verde</p>
     <p class="tallas">Nutricost BCAA Polvo (30 Servicios)</p>
@@ -352,7 +352,7 @@
 
  <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-  <img src="../imagen/BCAA/26.jpeg" alt="Manzana Verde" /></a>
+  <img src="./imagen/BCAA/26.jpeg" alt="Manzana Verde" /></a>
   <div class="product-info">
     <p class="tituloo">Manzana Verde</p>
     <p class="tallas">Nutricost BCAA Polvo (60 Servicios)</p>
@@ -363,7 +363,7 @@
 
  <div class="product-card">
     <a href="/Suplementos/BCAA O EAA.HTML">
-  <img src="../imagen/BCAA/27.jpeg" alt="Manzana Verde" /></a>
+  <img src="./imagen/BCAA/27.jpeg" alt="Manzana Verde" /></a>
   <div class="product-info">
     <p class="tituloo">Manzana Verde</p>
     <p class="tallas">Nutricost BCAA Polvo (120 Servicios)</p>
@@ -390,7 +390,7 @@
    <div class="container">
 
   <div class="product-card">
-    <img src="../imagen/BCAA/1.jpeg" alt="Sin Sabor" />
+    <img src="./imagen/BCAA/1.jpeg" alt="Sin Sabor" />
     <div class="product-info">
       <p class="tituloo">Sin Sabor</p>
       <p class="tallas">Nutricost EAA Powder 30 porciones Aminoácidos esenciales</p>
@@ -402,7 +402,7 @@
   </div>
 
   <div class="product-card">
-    <img src="../imagen/BCAA/2.jpeg" alt="Frambuesa Azul" />
+    <img src="./imagen/BCAA/2.jpeg" alt="Frambuesa Azul" />
     <div class="product-info">
       <p class="tituloo">Frambuesa Azul</p>
       <p class="tallas">Nutricost EAA Powder 30 porciones Aminoácidos esenciales</p>
@@ -413,7 +413,7 @@
   </div>
 
   <div class="product-card">
-    <img src="../imagen/BCAA/3.jpeg" alt="POG" />
+    <img src="./imagen/BCAA/3.jpeg" alt="POG" />
     <div class="product-info">
       <p class="tituloo">POG</p>
       <p class="tallas">Nutricost EAA Powder 30 porciones Aminoácidos esenciales</p>
@@ -424,7 +424,7 @@
   </div>
 
   <div class="product-card">
-    <img src="../imagen/BCAA/4.jpeg" alt="Fruit Punch" />
+    <img src="./imagen/BCAA/4.jpeg" alt="Fruit Punch" />
     <div class="product-info">
       <p class="tituloo">Fruit Punch</p>
       <p class="tallas">Nutricost EAA Powder 30 porciones Aminoácidos esenciales</p>
@@ -435,7 +435,7 @@
   </div>
 
   <div class="product-card">
-    <img src="../imagen/BCAA/5.jpeg" alt="Sin Sabor" />
+    <img src="./imagen/BCAA/5.jpeg" alt="Sin Sabor" />
     <div class="product-info">
       <p class="tituloo">Sin Sabor</p>
       <p class="tallas">BCAA Polvo (30 Servicios)</p>
