--- a/Suplementos.html
+++ b/Suplementos.html
@@ -1047,7 +1047,7 @@
 
   <div class="product-card">
 
-  <img src="../imagen/Magnesio/2.jpeg" alt="Nutricost">
+  <img src="./imagen/Magnesio/2.jpeg" alt="Nutricost">
   <div class="product-info">
     <p class="tituloo">Nutricost</p>
     <p class="tallas">Nutricost Glicinato de magnesio 420 mg,- 180 porciones, sin OMG, sin gluten para una alta absorción, suave para el estómago,</p>
@@ -1062,7 +1062,7 @@
 
 
   <div class="product-card">
-    <img src="../imagen/Magnesio/6.jpeg" alt="Bronson">
+    <img src="./imagen/Magnesio/6.jpeg" alt="Bronson">
   <div class="product-info">
     <p class="tituloo">Bronson</p>
     <p class="tallas">Glicinato de magnesio 200 mg por porción quelado para una alta absorción, suave para el estómago, sin OMG, 120 cápsulas</p>
@@ -1076,7 +1076,7 @@
 
 
   <div class="product-card">
-  <img src="../imagen/Omega 3/5.jpeg" alt="NatureWise Omega 3">
+  <img src="./imagen/Omega 3/5.jpeg" alt="NatureWise Omega 3">
   <div class="product-info">
     <p class="tituloo">NatureWise</p>
     <p class="tallas">NatureWise Suplemento de aceite de pescado Omega 3 extra fuerte – 1000 mg por porción – 600 EPA y 400 DHA y vitamina E</p>
