--- a/Accesorios.html
+++ b/Accesorios.html
@@ -17,7 +17,7 @@
     <a href="index.html"> <img src="./imagen/logo.jpeg" class="imagen">
   </a>
   </div>
- <a href="../imagen/Carito.html" class="Carito">🛒</a> 
+ <a href="./imagen/Carito.html" class="Carito">🛒</a> 
 </header>
 </div>
 
@@ -47,7 +47,7 @@
      
 <div class="product-card">
   <a href="./Accesorios/Asesorios_hombre.html">
-  <img src="../imagen/accesorios Hombres/1.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/accesorios Hombres/1.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Protecion para muñeca Strap Rojo</p>
@@ -57,7 +57,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Asesorios_hombre.html">
-  <img src="../imagen/accesorios Hombres/2.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/accesorios Hombres/2.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Protecion para muñeca Strap Negro</p>
@@ -68,7 +68,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Asesorios_hombre.html">
-  <img src="../imagen/accesorios Hombres/3.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/accesorios Hombres/3.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Protecion para muñeca Strap Azul</p>
@@ -81,7 +81,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Asesorios_hombre.html">
-  <img src="../imagen/accesorios Hombres/4.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/accesorios Hombres/4.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Guantes de Gimnasio Negro</p>
@@ -93,7 +93,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Asesorios_hombre.html">
-  <img src="../imagen/accesorios Hombres/5.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/accesorios Hombres/5.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Guantes de Gimnasio Azul</p>
@@ -106,7 +106,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Asesorios_hombre.html">
-  <img src="../imagen/accesorios Hombres/6.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/accesorios Hombres/6.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Guantes de Gimnasio Rojo</p>
@@ -119,7 +119,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Asesorios_hombre.html">
-  <img src="../imagen/accesorios Hombres/8.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/accesorios Hombres/8.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Guantes Abiertos de Gimnasio Negro</p>
@@ -132,7 +132,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Asesorios_hombre.html">
-  <img src="../imagen/accesorios Hombres/7.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/accesorios Hombres/7.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">2 Rodillera Deportivas</p>
@@ -142,7 +142,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Asesorios_hombre.html">
-  <img src="../imagen/accesorios Hombres/9.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/accesorios Hombres/9.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Guantes Con Proteccion de palma </p>
@@ -154,7 +154,7 @@
 
 <div class="product-card">
 <a href="./Accesorios/Asesorios_hombre.html">
-  <img src="../imagen/accesorios Hombres/10.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/accesorios Hombres/10.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Muñequera Elasticas</p>
@@ -164,7 +164,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Asesorios_hombre.html">
-  <img src="../imagen/accesorios Hombres/11.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/accesorios Hombres/11.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Cuerda de Salto Con Contador </p>
@@ -176,7 +176,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Accesorio_mujeres.html">
-  <img src="../imagen/accesorios Mujeres/3.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/accesorios Mujeres/3.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Correa de Tobillo para Maquinas Con Cable Rosado</p>
@@ -189,7 +189,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Accesorio_mujeres.html">
-  <img src="../imagen/accesorios Mujeres/4.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/accesorios Mujeres/4.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Correa de Tobillo para Maquinas Con Cable Negro</p>
@@ -199,7 +199,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Accesorio_mujeres.html">
-  <img src="../imagen/accesorios Mujeres/5.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/accesorios Mujeres/5.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Pal de Correa Para Tobillo</p>
@@ -210,7 +210,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Accesorio_mujeres.html">
-  <img src="../imagen/accesorios Mujeres/6.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/accesorios Mujeres/6.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Protecion para muñeca Strap Rosado</p>
@@ -221,7 +221,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Accesorio_mujeres.html">
-  <img src="../imagen/accesorios Mujeres/8.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/accesorios Mujeres/8.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Guantes super lijeros y Transpirable Con Proteccion</p>
@@ -234,7 +234,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Accesorio_mujeres.html">
-  <img src="../imagen/accesorios Mujeres/7.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/accesorios Mujeres/7.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Guantes de Nailon Con Almortiguadores</p>
@@ -244,7 +244,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Accesorio_mujeres.html">
-  <img src="../imagen/accesorios Mujeres/9.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/accesorios Mujeres/9.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Cuerda de Salto Con Contador</p>
