--- a/Suplementos.html
+++ b/Suplementos.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MAX SUPPLY</title>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>MaxSupply | Suplementos, Ropa Deportiva y Accesorios de Gym</title>
+
+  <meta name="description" content="En MaxSupply encuentras suplementos, ropa deportiva y accesorios fitness de alta calidad. ¡Equípate para tus entrenamientos y alcanza tus metas!">
+  <meta name="keywords" content="MaxSupply, suplementos deportivos, ropa de gym, accesorios de gimnasio, proteína, creatina, ropa deportiva hombre, ropa deportiva mujer, fitness">
+  <meta name="author" content="MaxSupply">
+
+  <!-- Favicon -->
+  <link rel="icon" href="logo.png" type="image/png">
+  <link rel="apple-touch-icon" href="./imagen/meta.jpg">
+
+  <!-- Open Graph (Facebook, WhatsApp, Instagram) -->
+  <meta property="og:title" content="MaxSupply | Suplementos, Ropa y Accesorios de Gym">
+  <meta property="og:description" content="Visita MaxSupply y equípate con suplementos, ropa deportiva y accesorios fitness de calidad. ¡Transforma tu entrenamiento!">
+  <meta property="og:image" content="https://www.maxsupply.com/assets/logo-maxsupply.jpg">
+  <meta property="og:url" content="https://www.maxsupply.com">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="MaxSupply">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="MaxSupply | Suplementos, Ropa y Accesorios de Gym">
+  <meta name="twitter:description" content="Encuentra lo mejor en suplementos, ropa de gym y accesorios fitness. Envíos rápidos y productos de calidad en MaxSupply.">
+  <meta name="twitter:image" content="https://www.maxsupply.com/assets/logo-maxsupply.jpg">
+</head>
   <link rel="stylesheet" href="./css/Suplementos.css" />
 </head>
 <body>
