--- a/Suplementos.html
+++ b/Suplementos.html
@@ -973,7 +973,7 @@
 
   <!-- Producto 8 -->
   <div class="product-card">
-     <a href="./Suplementos/Multivitaminico.html">>
+     <a href="./Suplementos/Multivitaminico.html">
     <img src="./imagen/Multivitamina/8.jpeg" alt="Optimen" /></a>
     <div class="product-info">
       <p class="tituloo">Optimen</p>
