--- a/juego/juego.html
+++ b/juego/juego.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
   <a href="../imagen/Carito.html">
-  <img src="/imagen/logo.jpeg" alt="Logo" class="logo" /></a>
+  <img src="./imagen/logo.jpeg" alt="Logo" class="logo" /></a>
   <h1>🎁 ¡Descubre tu premio!</h1>
   <!-- resto del contenido -->
 
