--- a/Accesorios.html
+++ b/Accesorios.html
@@ -280,7 +280,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Audifonos.html">
-  <img src="../imagen/Audifonos/1.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/Audifonos/1.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Audifonos TWS de Orejas abierta Negro</p>
@@ -291,7 +291,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Audifonos.html">
-  <img src="../imagen/Audifonos/2.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/Audifonos/2.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Audifonos TWS de Orejas abierta rojo</p>
@@ -302,7 +302,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Audifonos.html">
-  <img src="../imagen/Audifonos/3.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/Audifonos/3.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Audifonos TWS de Orejas abierta Negro</p>
@@ -313,7 +313,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Audifonos.html">
-  <img src="../imagen/Audifonos/4.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/Audifonos/4.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Mini Audifonos Inalambrico Ligeros Blanco</p>
@@ -324,7 +324,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Audifonos.html">
-  <img src="../imagen/Audifonos/5.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/Audifonos/5.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Mini Audifonos Inalambrico Ligeros Rosado</p>
@@ -335,7 +335,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Audifonos.html">
-  <img src="../imagen/Audifonos/6.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/Audifonos/6.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Mini Audifonos Inalambrico Ligeros Verde</p>
@@ -346,7 +346,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Audifonos.html">
-  <img src="../imagen/Audifonos/7.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/Audifonos/7.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Mini Audifonos Inalambrico Ligeros Negro</p>
@@ -357,7 +357,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Audifonos.html">
-  <img src="../imagen/Audifonos/8.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/Audifonos/8.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Auriculares Compacto y Portatil </p>
@@ -368,7 +368,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Audifonos.html">
-  <img src="../imagen/Audifonos/9.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/Audifonos/9.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Auriculares Con Efectos 3D y Resistente al Agua</p>
