--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <!-- Favicon -->
   <link rel="icon" href="logo.png" type="image/png">
-  <link rel="apple-touch-icon" href="./imagen/meta.jpg">
+  <link rel="apple-touch-icon" href="../imagen/meta.jpg">
 
   <!-- Open Graph (Facebook, WhatsApp, Instagram) -->
   <meta property="og:title" content="MaxSupply | Suplementos, Ropa y Accesorios de Gym">
@@ -4041,7 +4041,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Audifonos.html">
-  <img src="../imagen/Audifonos/1.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/Audifonos/1.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Audifonos TWS de Orejas abierta Negro</p>
@@ -4052,7 +4052,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Audifonos.html">
-  <img src="../imagen/Audifonos/2.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/Audifonos/2.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Audifonos TWS de Orejas abierta rojo</p>
@@ -4063,7 +4063,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Audifonos.html">
-  <img src="../imagen/Audifonos/3.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/Audifonos/3.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Audifonos TWS de Orejas abierta Negro</p>
@@ -4074,7 +4074,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Audifonos.html">
-  <img src="../imagen/Audifonos/4.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/Audifonos/4.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Mini Audifonos Inalambrico Ligeros Blanco</p>
@@ -4085,7 +4085,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Audifonos.html">
-  <img src="../imagen/Audifonos/5.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/Audifonos/5.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Mini Audifonos Inalambrico Ligeros Rosado</p>
@@ -4096,7 +4096,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Audifonos.html">
-  <img src="../imagen/Audifonos/6.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/Audifonos/6.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Mini Audifonos Inalambrico Ligeros Verde</p>
@@ -4107,7 +4107,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Audifonos.html">
-  <img src="../imagen/Audifonos/7.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/Audifonos/7.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Mini Audifonos Inalambrico Ligeros Negro</p>
@@ -4118,7 +4118,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Audifonos.html">
-  <img src="../imagen/Audifonos/8.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/Audifonos/8.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Auriculares Compacto y Portatil </p>
@@ -4129,7 +4129,7 @@
 
 <div class="product-card">
   <a href="./Accesorios/Audifonos.html">
-  <img src="../imagen/Audifonos/9.jpg" alt="Tenis Modelo 1"></a>
+  <img src="./imagen/Audifonos/9.jpg" alt="Tenis Modelo 1"></a>
   <div class="product-info">
     <!--<span class="badge">NEW</span>-->
     <p class="tituloo">Auriculares Con Efectos 3D y Resistente al Agua</p>
