--- a/Accesorios/Audifonos.html
+++ b/Accesorios/Audifonos.html
@@ -13,7 +13,7 @@
 
   <!-- Favicon -->
   <link rel="icon" href="logo.png" type="image/png">
-  <link rel="apple-touch-icon" href="./imagen/meta.jpg">
+  <link rel="apple-touch-icon" href="../imagen/meta.jpg">
 
   <!-- Open Graph (Facebook, WhatsApp, Instagram) -->
   <meta property="og:title" content="MaxSupply | Suplementos, Ropa y Accesorios de Gym">
