--- a/favoritos.html
+++ b/favoritos.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="navbar-center">
-        <a href="./index.html"><img src="../imagen/logo.jpeg" class="imagen" alt="Logo"></a>
+        <a href="../index.html"><img src="./imagen/logo.jpeg" class="imagen" alt="Logo"></a>
       </div>
  <a href="./imagen/Carito.html" class="Carito">🛒</a> 
       <nav id="side-menu" class="side-menu" aria-label="Menú lateral">
