--- a/favoritos.html
+++ b/favoritos.html
@@ -45,10 +45,10 @@
  <a href="./imagen/Carito.html" class="Carito">🛒</a> 
       <nav id="side-menu" class="side-menu" aria-label="Menú lateral">
         <ul>
-          <li><a href="../index.html">Inicio 🏠</a></li>
-          <li><a href="../Suplementos.html">Suplementos 💊</a></li>
-          <li><a href="../Ropa.html">Ropas 🎽</a></li>
-          <li><a href="../Accesorios.html">Accesorios 🏋️‍♀️</a></li>
+          <li><a href="./index.html">Inicio 🏠</a></li>
+          <li><a href="./Suplementos.html">Suplementos 💊</a></li>
+          <li><a href="./Ropa.html">Ropas 🎽</a></li>
+          <li><a href="./Accesorios.html">Accesorios 🏋️‍♀️</a></li>
         </ul>
       </nav>
     </header>
